--- a/src/components/process-block/process-block.module.scss
+++ b/src/components/process-block/process-block.module.scss
@@ -10,6 +10,7 @@
     background-color: white;
     padding: 90px 0 120px;
     padding-bottom: 0;
+    position: relative;
   }
 
   &Image {
