--- a/src/styles/_global.scss
+++ b/src/styles/_global.scss
@@ -31,6 +31,18 @@ body {
     font-weight: bold;
     text-transform: capitalize;
 
+    @include for-tablet-landscape-up {
+        max-width: 150px;
+    }
+
+    @include for-desktop-up {
+        max-width: 200px;
+    }
+
+    @include for-big-desktop-up {
+        max-width: 300px;
+    }
+
     &::before {
         position: absolute;
         content: '';
